--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build-storybook": "build-storybook"
   },
   "author": "Jonathan Couldridge <jon@jon.gg>",
-  "license": "UNLICENSED",
+  "license": "AGPL-3.0-only",
   "devDependencies": {
     "@babel/core": "^7.4.0",
     "@storybook/addon-actions": "^5.0.11",
@@ -31,9 +31,11 @@
     "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-plugin-replace": "^2.1.1",
     "rollup-plugin-terser": "^4.0.4",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "victory": "^32.2.3"
   },
   "dependencies": {
+    "@decsys/iaa": "file:../iaa/js/decsys-iaa-1.0.0-beta.1.tgz",
     "@decsys/param-types": "^0.3.1",
     "@decsys/rating-scales": "^0.8.0",
     "styled-icons": "^7.6.0"
@@ -41,6 +43,7 @@
   "peerDependencies": {
     "prop-types": "~15.x",
     "react": "~16.x",
-    "styled-components": "~4.x"
+    "styled-components": "~4.x",
+    "victory": "~32"
   }
 }
