--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "victory": "^32.2.3"
   },
   "dependencies": {
-    "@decsys/iaa": "file:../iaa/js/decsys-iaa-1.0.0-beta.1.tgz",
+    "@decsys/iaa": "^1.0.0-beta.1",
     "@decsys/param-types": "^0.3.1",
     "@decsys/rating-scales": "^0.8.0",
     "styled-icons": "^7.6.0"
