--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   "license": "AGPL-3.0-only",
   "devDependencies": {
     "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
     "@storybook/addon-actions": "^5.0.11",
     "@storybook/addon-knobs": "^5.0.11",
     "@storybook/addon-links": "^5.0.3",
     "@storybook/addons": "^5.0.3",
     "@storybook/react": "^5.0.11",
-    "@babel/preset-env": "^7.4.4",
-    "@babel/preset-react": "^7.0.0",
+    "mathjs": "^5.10.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "rollup": "^1.7.0",
@@ -44,6 +45,7 @@
     "prop-types": "~15.x",
     "react": "~16.x",
     "styled-components": "~4.x",
-    "victory": "~32"
+    "victory": "~32",
+    "mathjs": "~5"
   }
 }
