--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@decsys/ellipse-component",
   "componentName": "Ellipse",
-  "version": "0.8.0",
+  "version": "1.0.0-beta.1",
   "description": "The Ellipse Scale component for the DECSYS Survey Platform",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
