--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@decsys/ellipse-component",
   "componentName": "Ellipse",
-  "version": "1.0.0-beta.5",
+  "version": "1.0.0-beta.6",
   "description": "The Ellipse Scale component for the DECSYS Survey Platform",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -21,6 +21,7 @@
     "@storybook/addon-links": "^5.1.4",
     "@storybook/addons": "^5.1.4",
     "@storybook/react": "^5.1.4",
+    "babel-loader": "^8.0.6",
     "mathjs": "^5.10.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
